comment out form, come back later

--- a/templates/index.html
+++ b/templates/index.html
@@ -34,10 +34,10 @@
             <a class="btn btn-light btn-outline-dark" href="http://localhost:5001/count2">Click 2</a>
             <a class="btn btn-dark" href="http://localhost:5001/destroy_session">Reset</a>
         </div>
-        <form action="" method="post">
+        <!-- <form action="" method="post">
             <label for=""></label>
             <input type="number" name="increment" value="1">
-        </form>
+        </form> -->
         
         
     </div>
